[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
alignment = 1

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
margin_top = 333.0
margin_right = 651.0
margin_bottom = 347.0
text = "TETRIS"
align = 1

[node name="Button" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 351.0
margin_right = 651.0
margin_bottom = 371.0
text = "Start"

[node name="GameMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="GameMenu"]
margin_top = 144.0
margin_right = 144.0
margin_bottom = 704.0
text = "Oyunda"

[node name="Back" type="Button" parent="GameMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -49.0
margin_right = 48.0
margin_bottom = -8.0

[connection signal="pressed" from="MainMenu/VBoxContainer/Button" to="." method="_on_Button_pressed"]
